log to elasticsearch

--- a/fluent.conf
+++ b/fluent.conf
@@ -56,11 +56,11 @@
 # {"log":"[info:2016-02-16T16:04:05.930-08:00] Some log text here\n","stream":"stdout","time":"2016-02-17T00:04:05.931087621Z"}
 # exclude kubernetes logs which start with `kube` or `k8s`
 <source>
-  type tail
+  @type tail
   format json
   time_key time
-  path /var/log/containers/*.log
-  exclude_path ["/var/log/containers/kube*.log", "/var/log/containers/k8s*.log"]
+  path /var/log/containers/*green-dev*.log
+  exclude_path ["/var/log/containers/kube*.log", "/var/log/containers/k8s*.log", "/var/log/containers/es*.log", "/var/log/containers/fluentd*.log"]
   pos_file /var/log/gcp-containers.log.pos
   time_format %Y-%m-%dT%H:%M:%S.%NZ
   tag reform.*
@@ -76,21 +76,14 @@
 
 
 <match kubernetes.**>
-  @type file
-  path /var/log/fluent/kuku
-  time_slice_format %Y%m%d
-  time_slice_wait 10m
-  time_format %Y%m%dT%H%M%S%z
-  compress gzip
-  utc
-</match>
-
-<match **>
-  @type file
-  path /var/log/fluent/keke
-  time_slice_format %Y%m%d
-  time_slice_wait 10m
-  time_format %Y%m%dT%H%M%S%z
-  compress gzip
-  utc
+  @type elasticsearch
+  host elasticsearch
+  port 9200
+  logstash_format true
+  logstash_prefix dockercontainerslogs
+  time_key inserted_at
+  time_key_format %Y-%m-%dT%H:%M:%S.%N%z
+  include_tag_key true
+  target_index_key @target_index
+  index_name fluentd
 </match>
