--- a/fluent.conf
+++ b/fluent.conf
@@ -58,11 +58,9 @@
 <source>
   @type tail
   format json
-  time_key time
   path /var/log/containers/*green-dev*.log
   exclude_path ["/var/log/containers/kube*.log", "/var/log/containers/k8s*.log", "/var/log/containers/es*.log", "/var/log/containers/fluentd*.log"]
-  pos_file /var/log/gcp-containers.log.pos
-  time_format %Y-%m-%dT%H:%M:%S.%NZ
+  # pos_file /var/log/gcp-containers.log.pos
   tag reform.*
   read_from_head true
 </source>
@@ -73,17 +71,34 @@
   tag kubernetes.${tag_suffix[4].split('-')[0..-2].join('-')}
 </match>
 
-
+<filter kubernetes.**>
+  type parser
+  format json_in_string
+  time_format %Y-%m-%dT%H:%M:%S.%L%Z
+  key_name log
+</filter>
 
 <match kubernetes.**>
-  @type elasticsearch
-  host elasticsearch
-  port 9200
-  logstash_format true
-  logstash_prefix dockercontainerslogs
-  time_key inserted_at
-  time_key_format %Y-%m-%dT%H:%M:%S.%N%z
-  include_tag_key true
-  target_index_key @target_index
-  index_name fluentd
+  @type copy
+  <store>
+    @type stdout
+    output_type json
+  </store>
+  <store>
+    @type file
+    path /var/log/fluent/green-dev
+    time_slice_format %Y%m%d
+    time_slice_wait 10m
+    time_format %Y%m%dT%H%M%S%z
+    compress gzip
+    utc
+  </store>
+  # <store>
+  #   @type elasticsearch
+  #   host elasticsearch
+  #   logstash_format true
+  #   include_tag_key true
+  #   buffer_type memory
+  #   flush_interval 1
+  # </store>
 </match>
