flatten by elasticserach plugin

--- a/fluent.conf
+++ b/fluent.conf
@@ -93,12 +93,14 @@
     compress gzip
     utc
   </store>
-  # <store>
-  #   @type elasticsearch
-  #   host elasticsearch
-  #   logstash_format true
-  #   include_tag_key true
-  #   buffer_type memory
-  #   flush_interval 1
-  # </store>
+  <store>
+    @type elasticsearch
+    host elasticsearch
+    flatten_hashes true
+    flatten_hashes_separator .
+    logstash_format true
+    include_tag_key true
+    buffer_type memory
+    flush_interval 10
+  </store>
 </match>
