--- a/fluent.conf
+++ b/fluent.conf
@@ -49,7 +49,7 @@
 
 # Do not directly collect fluentd's own logs to avoid infinite loops.
 <match fluent.**>
-  type null
+  @type null
 </match>
 
 # Example:
@@ -66,16 +66,18 @@
 </source>
 
 <match reform.**>
-  type record_reformer
+  @type record_reformer
   enable_ruby true
   tag kubernetes.${tag_suffix[4].split('-')[0..-2].join('-')}
 </match>
 
 <filter kubernetes.**>
-  type parser
+  @type parser
   format json_in_string
   time_format %Y-%m-%dT%H:%M:%S.%L%Z
+  time_key timestamp
   key_name log
+  suppress_parse_error_log true
 </filter>
 
 <match kubernetes.**>
@@ -96,6 +98,8 @@
   <store>
     @type elasticsearch
     host elasticsearch
+    host "#{ENV['ELASTICSEARCH_HOST']}"
+    port "#{ENV['ELASTICSEARCH_PORT']}"
     flatten_hashes true
     flatten_hashes_separator .
     logstash_format true
