add simple forwarder

--- a/fluent.conf
+++ b/fluent.conf
@@ -65,6 +65,16 @@
   read_from_head true
 </source>
 
+<source>
+  @type forward
+</source>
+
+<match docker.**>
+  @type record_reformer
+  enable_ruby true
+  tag kubernetes.old.${tag}
+</match>
+
 <match reform.**>
   @type record_reformer
   enable_ruby true
