push threatening/error logs to slack

--- a/fluent.conf
+++ b/fluent.conf
@@ -90,31 +90,63 @@
   suppress_parse_error_log true
 </filter>
 
+<filter kubernetes.**>
+  type flatten_hash
+  separator .
+</filter>
+
 <match kubernetes.**>
+  @type rewrite_tag_filter
+  rewriterule1 level  ^(emerg|alert|crit)$          threatening.${tag}
+  rewriterule2 level  ^(error)$                     error.${tag}
+  rewriterule3 level  !^(emerg|alert|crit|error)$   store.${tag}
+</match>
+
+<match threatening.**>
   @type copy
   <store>
-    @type stdout
-    output_type json
+    @type slack
+    webhook_url "#{ENV['SLACK_WEBHOOK_URL']}"
+    channel "#{ENV['SLACK_CHANNEL']}"
+    link_names true
+    title %s %s
+    title_keys NODE_ENV,GENERATED_BY
+    message "_%s_: %s for request _%s_ at %s"
+    message_keys level,message,x-request-id,timestamp
+    flush_interval 1s
   </store>
   <store>
-    @type file
-    path /var/log/fluent/green-dev
-    time_slice_format %Y%m%d
-    time_slice_wait 10m
-    time_format %Y%m%dT%H%M%S%z
-    compress gzip
-    utc
+    @type rewrite_tag_filter
+    rewriterule1 message  .+  store.${tag}
+  </store>
+</match>
+
+<match error.**>
+  @type copy
+  <store>
+    @type slack
+    webhook_url "#{ENV['SLACK_WEBHOOK_URL']}"
+    channel "#{ENV['SLACK_CHANNEL']}"
+    link_names true
+    title %s %s
+    title_keys NODE_ENV,GENERATED_BY
+    message "_%s_: %s for request _%s_ at %s"
+    message_keys level,message,x-request-id,timestamp
+    flush_interval 10s
   </store>
   <store>
-    @type elasticsearch
-    host elasticsearch
-    host "#{ENV['ELASTICSEARCH_HOST']}"
-    port "#{ENV['ELASTICSEARCH_PORT']}"
-    flatten_hashes true
-    flatten_hashes_separator .
-    logstash_format true
-    include_tag_key true
-    buffer_type memory
-    flush_interval 10
+    @type rewrite_tag_filter
+    rewriterule1 message  .+  store.${tag}
   </store>
+</match>
+
+<match store.**>
+  @type elasticsearch
+  host elasticsearch
+  host "#{ENV['ELASTICSEARCH_HOST']}"
+  port "#{ENV['ELASTICSEARCH_PORT']}"
+  logstash_format true
+  include_tag_key true
+  buffer_type memory
+  flush_interval 10
 </match>
