--- a/fluent.conf
+++ b/fluent.conf
@@ -95,58 +95,58 @@
   separator .
 </filter>
 
+<filter kubernetes.**>
+  @type record_transformer
+  enable_ruby
+  <record>
+     _id ${rand(36**20).to_s(36)}
+  </record>
+</filter>
+
 <match kubernetes.**>
-  @type rewrite_tag_filter
-  rewriterule1 level  ^(emerg|alert|crit)$          threatening.${tag}
-  rewriterule2 level  ^(error)$                     error.${tag}
-  rewriterule3 level  !^(emerg|alert|crit|error)$   store.${tag}
-</match>
-
-<match threatening.**>
   @type copy
   <store>
-    @type slack
-    webhook_url "#{ENV['SLACK_WEBHOOK_URL']}"
-    channel "#{ENV['SLACK_CHANNEL']}"
-    link_names true
-    title %s %s
-    title_keys NODE_ENV,GENERATED_BY
-    message "_%s_: %s for request _%s_ at %s"
-    message_keys level,message,x-request-id,timestamp
-    flush_interval 1s
+    @type elasticsearch
+    host elasticsearch
+    host "#{ENV['ELASTICSEARCH_HOST']}"
+    port "#{ENV['ELASTICSEARCH_PORT']}"
+    logstash_format true
+    id_key _id
+    include_tag_key true
+    buffer_type memory
+    flush_interval 10
   </store>
   <store>
     @type rewrite_tag_filter
-    rewriterule1 message  .+  store.${tag}
+    rewriterule1 level  ^(emerg|alert|crit)$          notify.${tag}
+    rewriterule2 level  ^(error)$                     notify.${tag}
+    rewriterule3 level  !^(emerg|alert|crit|error)$   ignore.${tag}
   </store>
 </match>
 
-<match error.**>
-  @type copy
-  <store>
-    @type slack
-    webhook_url "#{ENV['SLACK_WEBHOOK_URL']}"
-    channel "#{ENV['SLACK_CHANNEL']}"
-    link_names true
-    title %s %s
-    title_keys NODE_ENV,GENERATED_BY
-    message "_%s_: %s for request _%s_ at %s"
-    message_keys level,message,x-request-id,timestamp
-    flush_interval 10s
-  </store>
-  <store>
-    @type rewrite_tag_filter
-    rewriterule1 message  .+  store.${tag}
-  </store>
+<match notify.**>
+  @type record_reformer
+  tag slack.${tag}
+  enable_ruby true
+  <record>
+    kibana "#{ENV['KIBANA_HOST']}"
+    es_index "#{ENV['ELASTICSEARCH_INDEX']}"
+    today ${time.strftime('%Y.%m.%d')}
+  </record>
 </match>
 
-<match store.**>
-  @type elasticsearch
-  host elasticsearch
-  host "#{ENV['ELASTICSEARCH_HOST']}"
-  port "#{ENV['ELASTICSEARCH_PORT']}"
-  logstash_format true
-  include_tag_key true
-  buffer_type memory
-  flush_interval 10
+<match slack.**>
+  @type slack
+  webhook_url "#{ENV['SLACK_WEBHOOK_URL']}"
+  channel "#{ENV['SLACK_CHANNEL']}"
+  link_names true
+  title %s %s
+  title_keys NODE_ENV,GENERATED_BY
+  message "_%s_: %s at %s. %s/#/doc/%s-*/%s-%s/fluentd?id=%s"
+  message_keys level,message,timestamp,kibana,es_index,es_index,today,_id
+  flush_interval 1s
+</match>
+
+<match ignore.**>
+  @type null
 </match>
