ignore error logs

--- a/fluent.conf
+++ b/fluent.conf
@@ -119,7 +119,7 @@
   <store>
     @type rewrite_tag_filter
     rewriterule1 level  ^(emerg|alert|crit)$          notify.${tag}
-    rewriterule2 level  ^(error)$                     notify.${tag}
+    rewriterule2 level  ^(error)$                     ignore.${tag}
     rewriterule3 level  !^(emerg|alert|crit|error)$   ignore.${tag}
   </store>
 </match>
