allow providing elasticsearch username/password

--- a/fluent.conf
+++ b/fluent.conf
@@ -100,6 +100,9 @@
     host elasticsearch
     host "#{ENV['ELASTICSEARCH_HOST']}"
     port "#{ENV['ELASTICSEARCH_PORT']}"
+    logstash_prefix "#{ENV['ELASTICSEARCH_INDEX']}"
+    user "#{ENV['ELASTICSEARCH_USER']}"
+    password "#{ENV['ELASTICSEARCH_PASSWORD']}"
     logstash_format true
     id_key _id
     include_tag_key true
