add configuration for ssl_verify and protocol schema

--- a/fluent.conf
+++ b/fluent.conf
@@ -49,7 +49,8 @@
 
 # Do not directly collect fluentd's own logs to avoid infinite loops.
 <match fluent.**>
-  @type null
+  @type stdout
+  output_type hash
 </match>
 
 # Example:
@@ -89,7 +90,7 @@
   @type record_transformer
   enable_ruby
   <record>
-     _id ${rand(36**20).to_s(36)}
+     __id ${rand(36**20).to_s(36)}
   </record>
 </filter>
 
@@ -97,14 +98,16 @@
   @type copy
   <store>
     @type elasticsearch
-    host elasticsearch
     host "#{ENV['ELASTICSEARCH_HOST']}"
     port "#{ENV['ELASTICSEARCH_PORT']}"
     logstash_prefix "#{ENV['ELASTICSEARCH_INDEX']}"
     user "#{ENV['ELASTICSEARCH_USER']}"
     password "#{ENV['ELASTICSEARCH_PASSWORD']}"
+    ssl_verify "#{ENV['ELASTICSEARCH_SSL_VERIFY']}"
+    scheme "#{ENV['ELASTICSEARCH_SCHEMA']}"
+    reconnect_on_error true
     logstash_format true
-    id_key _id
+    id_key __id
     include_tag_key true
     buffer_type memory
     flush_interval 10
@@ -136,7 +139,7 @@
   title %s %s
   title_keys NODE_ENV,GENERATED_BY
   message "_%s_: %s at %s. %s/#/doc/%s-*/%s-%s/fluentd?id=%s"
-  message_keys level,message,timestamp,kibana,es_index,es_index,today,_id
+  message_keys level,message,timestamp,kibana,es_index,es_index,today,__id
   flush_interval 1s
 </match>
 
